Added Utility classes for URI and URL, Cleaned up code.